# emmilcheung.github.io

./: .gitignore  AUDIT_REPORT.md  DEVELOPMENT.md  README.md  SETUP_COMPLETE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  setup.sh  sst-env.d.ts  sst.config.ts  styles.css  tailwind.config.js  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
apps/web/: .env.example  index.html  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.svelte  app.css  vite-env.d.ts
apps/web/src/components/: Certifications.svelte  Education.svelte  Experience.svelte  Footer.svelte  Hero.svelte  HowItWorks.svelte  Projects.svelte  Skills.svelte
assets/: index-BSZmgyLB.css  index-CGzlNVg9.js
data/: resume.db
services/rag/: README.md  add_vec_index.mjs  build_rag.py  pyproject.toml  requirements.txt  sst.pyi
src/: App.svelte
src/components/: Certifications.svelte  Footer.svelte  Skills.svelte
